added new styles directory and style.css file and pushed and committed through command line.

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -2,9 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>PWP: Patanjali Rio Rancho</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
+
+    !---The biography for my personal website --->
 <body>
+
+    <h1>Purpose:</h1>
+
+    <div class="body">
+
+        <p> The website will be a small business website with focus on the front-end. It will also include a section for<br>
+        e-commerce (online Yoga classes registration) and a newsletter that sends out a daily mantra.</p>
+
+        <h1>Audience:</h1>
+
+        <p> The website is targeted towards private individuals not only interested in taking Yoga classes but with<br>
+        a special interest in classical Yoga including Kriya rituals and Pranayama techniques for both physical and mental<br>
+        well-being. The philosophy and practices are based on the ancient scriptures of Maharshi Patanali's Yoga Sutras.</p>
+
+        <h1>Goal:</h1>
+         <p> The primary goal is to offer individuals with a special interest in Patanjali's Yoga Sutras a class</p>
+
+    </div>
+
+
 $END$
 </body>
 </html>
