--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -13,16 +13,19 @@
 
         <h1>Purpose:</h1>
 
-        <p> The website will be a small business website with focus on the front-end. It will also include a section for<br>
-        e-commerce (online Yoga classes registration) and a newsletter that sends out a daily mantra.</p>
+        <p>The website will be a small business website with focus on the front-end. It will also include a form for people<br>
+            to sign up and receive a <em>daily mantra</em>. In the future it might have a section for some e-commerce<br>
+            (registration for online Yoga classes). But momentarily this is out of scope.</p>
 
         <h1>Audience:</h1>
 
-        <p> The website is targeted towards private individuals not only interested in taking Yoga classes but with a special interestn in classical Yoga including Kriya rituals and Pranayama techniques for both physical and mental
-        well-being. The philosophy and practices are based on the ancient scriptures of Maharshi Patanali's Yoga Sutras.</p>
+        <p> The website is targeted towards private individuals not only interested in taking Yoga classes but with a special interest<br>
+            in classical Yoga including Kriya rituals and Pranayama techniques for both physical and mental well-being. The philosophy and practices<br>
+            are based on the ancient scriptures of Maharshi Patanali's Yoga Sutras.</p>
 
         <h1>Goal:</h1>
-        <p> The primary goal is to offer individuals with a special interest in Patanjali's Yoga Sutras a class</p>
+        <p> The primary goal is to attract individuals with a special interest in classical Yoga and Patanjali so they inquire about classes.<br>
+        The secondary goal is to use this website for my professional portfolio.</p>
 
     </div>
 
