corrected minor typos.

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -6,28 +6,65 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 
-!---Purpose, Audience, and Goal of the website--->
+<!---Purpose, Audience, and Goal of the Website--->
 <body>
 
-    <div class="body">
+    <div class="text-block">
+
+        <h1>PWP: Patanjali Rio Rancho</h1>
 
         <h1>Purpose:</h1>
 
-        <p>The website will be a small business website with focus on the front-end. It will also include a form for people<br>
-            to sign up and receive a <em>daily mantra</em>. In the future it might have a section for some e-commerce<br>
-            (registration for online Yoga classes). But momentarily this is out of scope.</p>
+        <p>The website will be a small business website with focus on the front-end. It will also include a form for people to sign up and receive a <em>daily mantra</em>. In the future it might have a section for some e-commerce (registration for online Yoga classes).<br>
+            But momentarily this is out of scope.</p>
 
         <h1>Audience:</h1>
 
-        <p> The website is targeted towards private individuals not only interested in taking Yoga classes but with a special interest<br>
-            in classical Yoga including Kriya rituals and Pranayama techniques for both physical and mental well-being. The philosophy and practices<br>
-            are based on the ancient scriptures of Maharshi Patanali's Yoga Sutras.</p>
+        <p> The website is targeted towards private individuals not only interested in taking Yoga classes but with a special interest in classical Yoga including Kriya rituals and Pranayama techniques for both physical and mental well-being.<br>
+            The philosophy and practices are based on the ancient scriptures of Maharshi Patanali's Yoga Sutras.</p>
 
         <h1>Goal:</h1>
-        <p> The primary goal is to attract individuals with a special interest in classical Yoga and Patanjali so they inquire about classes.<br>
-        The secondary goal is to use this website for my professional portfolio.</p>
+        <p> The primary goal is to attract individuals with a special interest in classical Yoga and Patanjali so they inquire about classes. The secondary goal is to use this website for my professional portfolio.</p>
+
+    </div>
+
+    <div class="persona">
+
+        <h1>Persona</h1>
+
+        <h2>Name: </h2>
+        <p>Massimo Pasquino</p>
+
+        <h2>Profession</h2>
+        <p>Italian Instructor, Interpreter and Linguist. Traveller. Hobby-Blogger.</p>
+
+        <h2>Technology</h2>
+            <ul>
+                <li>Massimo is very comfortable behind the computer and considers himself a <em>Power User</em>. He uses his laptop extensively for both his work and his private life/hobby.</li>
+                <li>He prefers mobile apps for specific things when he is on the go but, he enjoys web-based apps at home to view on a bigger screen/monitor.</li>
+                <li>He uses a Lenovo ThinkPad running OS Windows 11 and mainly uses Firefox as his browser of choice. Sometimes he uses Chrome.</li>
+                <li>Massimo also uses his iPhone 11 a lot which runs on IOS 15.</li>
+                <li>His wife uses a Macbook Air but, he only uses her Mac very rarely as a backup.</li>
+            </ul>
+
+        <h2>Attitudes and Behaviors</h2>
+        <p>He loves languages and writing and creates content regularly for his and his wife's travel vlogs and blogs. Massimo and his wife travelled to India a while ago and sometimes still take Yoga classes but not on a regular basis.<br>
+           They are both very interested in other cultures and have a special interest in Indian Philosophy and the different kinds of Yogic Paths one can take. They want to learn more about traditional Yogic practices besides the usual asana classes.</p>
+
+        <h2>Frustrations</h2>
+            <ul>
+                <li>Massimo does not like sloppy layouts or low quality images.</li>
+                <li>He is put off by websites that are difficult to navigate and that take a long time to load.</li>
+                <li>He gets frustrated when images in particular take too long to load and tends to move on to another website then.</li>
+            </ul>
+
+        <h2>Goals</h2>
+        <p>
+            Both Massimo and his wife want to learn more about traditional Yogic techniques like Kriyas and Pranayamas. They want to experience more than they can in typical Yoga classes and also love to hear about Indian and Hindu culture.
+        </p>
 
     </div>
 
 </body>
 </html>
+
