tried ti mark .styles/style as resourse directory but it WebStorm does not grab it.

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -32,8 +32,8 @@
 
         <h1>Persona</h1>
 
-        <h2>Name: </h2>
-        <p>Massimo Pasquino</p>
+        <h2>Name & Age: </h2>
+        <p>Massimo Pasquino, 45.</p>
 
         <h2>Profession</h2>
         <p>Italian Instructor, Interpreter and Linguist. Traveller. Hobby-Blogger.</p>
@@ -63,8 +63,13 @@
             Both Massimo and his wife want to learn more about traditional Yogic techniques like Kriyas and Pranayamas. They want to experience more than they can in typical Yoga classes and also love to hear about Indian and Hindu culture.
         </p>
 
+        <h2>User Story</h2>
+        <p>
+            As a user, I want to inform myself about traditional Yogic practices that go beyond the typical Yoga classes. From an aesthetic point of view, I enjoy photography and like to see beautiful images that don't compromise the functionality of a website.<br>
+            If a website looks cluttered and unpleasant, I will move on.
+        </p>
+
     </div>
 
 </body>
 </html>
-
