some minor changes to formatting

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>PWP: Patanjali Rio Rancho</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 
 <!---Purpose, Audience, and Goal of the Website--->
@@ -13,20 +13,21 @@
 
         <h1>PWP: Patanjali Rio Rancho</h1>
 
-        <h1>Purpose:</h1>
+        <h2>Purpose:</h2>
 
-        <p>The website will be a small business website with focus on the front-end. It will also include a form for people to sign up and receive a <em>daily mantra</em>. In the future it might have a section for some e-commerce (registration for online Yoga classes).<br>
-            But momentarily this is out of scope.</p>
+        <p>The website will be a small business website with focus on the front-end. It will also include a form for people to sign up and receive a <em>daily mantra</em>. In the future it might have a section for some e-commerce (registration for online Yoga classes). But momentarily this is out of scope.</p>
 
-        <h1>Audience:</h1>
+        <h2>Audience:</h2>
 
-        <p> The website is targeted towards private individuals not only interested in taking Yoga classes but with a special interest in classical Yoga including Kriya rituals and Pranayama techniques for both physical and mental well-being.<br>
-            The philosophy and practices are based on the ancient scriptures of Maharshi Patanali's Yoga Sutras.</p>
+        <p> The website is targeted towards private individuals not only interested in taking Yoga classes but with a special interest in classical Yoga including Kriya rituals and Pranayama techniques for both physical and mental well-being. The philosophy and practices are based on the ancient scriptures of Maharshi Patanali's Yoga Sutras.</p>
 
-        <h1>Goal:</h1>
+        <h2>Goal:</h2>
         <p> The primary goal is to attract individuals with a special interest in classical Yoga and Patanjali so they inquire about classes. The secondary goal is to use this website for my professional portfolio.</p>
 
     </div>
+
+
+    <div class="text-block">
 
     <div class="persona">
 
@@ -48,8 +49,9 @@
             </ul>
 
         <h2>Attitudes and Behaviors</h2>
-        <p>He loves languages and writing and creates content regularly for his and his wife's travel vlogs and blogs. Massimo and his wife travelled to India a while ago and sometimes still take Yoga classes but not on a regular basis.<br>
-           They are both very interested in other cultures and have a special interest in Indian Philosophy and the different kinds of Yogic Paths one can take. They want to learn more about traditional Yogic practices besides the usual asana classes.</p>
+        <p>He loves languages and writing and creates content regularly for his and his wife's travel vlogs and blogs. Massimo and his wife travelled to India a while ago and sometimes still take Yoga classes but not on a regular basis.</p>
+
+        <p>They are both very interested in other cultures and have a special interest in Indian Philosophy and the different kinds of Yogic Paths one can take. They want to learn more about traditional Yogic practices besides the usual asana classes.</p>
 
         <h2>Frustrations</h2>
             <ul>
@@ -65,11 +67,15 @@
 
         <h2>User Story</h2>
         <p>
-            As a user, I want to inform myself about traditional Yogic practices that go beyond the typical Yoga classes. From an aesthetic point of view, I enjoy photography and like to see beautiful images that don't compromise the functionality of a website.<br>
-            If a website looks cluttered and unpleasant, I will move on.
-        </p>
+            As a user, I want to inform myself about traditional Yogic practices that go beyond the typical Yoga classes. From an aesthetic point of view, I enjoy photography and like to see beautiful images that don't compromise the functionality of a website.</p>
+
+        <p>If a website looks cluttered and unpleasant, I will move on.</p>
+
+    </div>
 
     </div>
 
 </body>
 </html>
+
+
