added content strategy and edited some minor typos.

--- a/public_html/documentation/milestone-2.html
+++ b/public_html/documentation/milestone-2.html
@@ -6,6 +6,39 @@
 </head>
 
 <body>
+    <h1>Content Strategy</h1>
+
+    <h2>Welcome</h2>
+    <p>The welcome section is simply going to be a picture that should resonate with individuals that are familiar with Yoga or a Yogic Path. I will use a lot of images either as background
+    or as stand-alones paired with meaningful quotes that relate to Patanjali's Yoga Philosophy. The website shall differ from typical Western Yoga websites in that it focuses on
+    the Ancient Indian Philosophy rather than selling classes that teach obscure poses. It is not meant to attract people interested in "celebrity Yoga". It is meant to speak to individuals
+    that have a genuine interest in the Ancient Indian Philosophy of the Rishis.</p>
+
+    <h2>What is Yoga?</h2>
+    <p>Right below the welcome image I want to quote Patanjali's definition of Yoga the way he describes it in the "Bible" of Yoga. It is also the definition I learned from my Indian teachers.<br>
+    This quote refers to the Yoga Sutras.</p>
+
+    <h2>Classes</h2>
+    <p>The classes section shows four icons or images that represent the sequence that I practice and learned. Each class that I will be teaching follows: conditioning, beginner-friendly asanas from Hatha Yoga (the oldest or classical form of Yoga), followed by Pranayamas, and lastly every class ends with relaxation with the help of meditation techniques. Each image will show how each step could look like and will be accompanied by a short paragraph with a description.</p>
+
+    <h2>About Me</h2>
+    <p>The about me section will show a picture of me and I will talk about what got me into Yoga, where I got certified, etc. I will put a link to my accredited school in Mumbai, India. It will also mention the lineage of the house (the gurus and a time-line).</p>
+
+    <h2>Namaste!</h2>
+    <p>This section is for receiving a daily mantra in your email inbox. It will probably be set up through a newsletter function via (free) MailChimp.</p>
+
+    <h2>Contact Form</h2>
+    <p>The contact form is to inquire about classes. Users can input their information and submit it.</p>
+
+    <h1>Wireframes</h1>
+    <p>My website will feature a layout that will be responsive on both desktop and a mobile devices. The layout was created on www.balsamiq.com and both images are added to the images directory under the main documentation directory.</p>
+
+    <h2>Mobile Layout</h2>
+    <img src="./images/patanjali-nm-mobile.png" alt="Mobile Layout" width="45%" height="45%">
+
+
+    <h2>Desktop Layout</h2>
+    <img src="./images/patanjali-nm-desktop.png" alt="Desktop Layout" width="750px" height="950px">
 
 </body>
 </html>
