added navbar and menu inn html.

--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PWP: Patanjali Rio Rancho</title>
+    <title>PWP: Patanjali Yogini</title>
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 
@@ -11,7 +11,7 @@
 
     <div class="text-block">
 
-        <h1>PWP: Patanjali Rio Rancho</h1>
+        <h1>PWP: Patanjali Yogini</h1>
 
         <h2>Purpose:</h2>
 
