added index-image img-fluid to position it on top.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <!--Required meta tags-->
     <meta charset="UTF-8">
+    <meta name="viewport" content="with-device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Mirjam Wolf">
+    <title>PWP - Patanjali Yogini</title>
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Patanjali Yogini</title>
-    <!--<link rel="stylesheet type=text/css" href="style.css">
-    <script src="script.js"></script>-->
+    <!-- CSS Stylesheet -->
+    <link rel="stylesheet type=text/css" href="main-style.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
 
-<nav class="mt-md-4 rounded border border-1 border-dark container navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Patanjali Yogini</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,6 +35,13 @@
     </div>
 </nav>
 
+<div class="index-image">
+    <img src="ganesha-01.jpg" class="img-fluid" alt="Ganesha">
+</div>
+
+<div class="container-quote">
+
+</div>
 
 
 
@@ -37,6 +49,7 @@
 
 
 
+<!-- Script from Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
