--- a/public_html/index.html
+++ b/public_html/index.html
@@ -39,7 +39,11 @@
     <img src="ganesha-01.jpg" class="img-fluid" alt="Ganesha">
 </div>
 
-<div class="container-quote">
+<div class="container-fluid-quote">
+    <p><i>Yoga Chittavritti Nirodha</i></p>
+    <p>Maharshi Patanjali, founder of the Yogic Philosophy defines Yog as concentration.</p>
+    <p>The above saying translates to <i>"stoppage of fluctuations of the mind.</i></p>
+    <p>Yoga is <b><i>Samadhi</i></b> (a state of deep concentration).</p>
 
 </div>
 
