added another image and quote.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -39,12 +39,16 @@
     <img src="ganesha-01.jpg" class="img-fluid" alt="Ganesha">
 </div>
 
-<div class="container-fluid-quote">
+<div class="container-fluid-quote-1">
     <p><i>Yoga Chittavritti Nirodha</i></p>
     <p>Maharshi Patanjali, founder of the Yogic Philosophy defines Yog as concentration.</p>
     <p>The above saying translates to <i>"stoppage of fluctuations of the mind.</i></p>
     <p>Yoga is <b><i>Samadhi</i></b> (a state of deep concentration).</p>
+</div>
 
+<div class="container-fluid-quote-2">
+    <img src="india-01.jpg">
+    <p>Another quote</p>
 </div>
 
 
