--- a/public_html/index.html
+++ b/public_html/index.html
@@ -47,8 +47,12 @@
 </div>
 
 <div class="container-fluid-quote-2">
-    <img src="india-01.jpg">
-    <p>Another quote</p>
+    <div class="image-2">
+        <img src="india-01.jpg" class="image-fluid" alt="India">
+    </div>
+    <div class="quote-2">
+        <p>Another Quote here.</p>
+    </div>
 </div>
 
 
