--- a/public_html/index.html
+++ b/public_html/index.html
@@ -43,7 +43,7 @@
     <p><i>Yoga Chittavritti Nirodha</i></p>
     <p>Maharshi Patanjali, founder of the Yogic Philosophy defines Yog as concentration.</p>
     <p>The above saying translates to <i>"stoppage of fluctuations of the mind.</i></p>
-    <p>Yoga is <b><i>Samadhi</i></b> (a state of deep concentration).</p>
+    <p>Yog is <b><i>Samadhi</i></b> (a state of deep concentration).</p>
 </div>
 
 <div class="container-fluid-quote-2">
