added another quote.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -39,22 +39,33 @@
     <img src="ganesha-01.jpg" class="img-fluid" alt="Ganesha">
 </div>
 
-<div class="container-fluid-quote-1">
-    <p><i>Yoga Chittavritti Nirodha</i></p>
-    <p>Maharshi Patanjali, founder of the Yogic Philosophy defines Yog as concentration.</p>
-    <p>The above saying translates to <i>"stoppage of fluctuations of the mind.</i></p>
-    <p>Yog is <b><i>Samadhi</i></b> (a state of deep concentration).</p>
+<div class="section">
+    <div class="container-fluid-quote-1">
+        <p><i>Yoga Chittavritti Nirodha</i></p>
+        <p>Maharshi Patanjali, founder of the Yogic Philosophy defines Yog as concentration.</p>
+        <p>The above saying translates to <i>"stoppage of fluctuations of the mind."</i></p>
+    </div>
 </div>
+
 
 <div class="container-fluid-quote-2">
     <div class="image-2">
         <img src="india-01.jpg" class="image-fluid" alt="India">
     </div>
     <div class="quote-2">
-        <p>Another Quote here.</p>
+        <p>"Yoga is Samadhi - a deep state of concentration."<br>
+            The stillness of your mind can be attained once you learn how to keep your body still."</p>
     </div>
 </div>
 
+<div class="container-fluid-quote-3">
+    <div class="image-3">
+
+    </div>
+    <div class="quote-3">
+        <p>"Another Quote from Yoga Sutras."</p>
+    </div>
+</div>
 
 
 
