--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,25 +2,27 @@
 <html lang="en">
 <head>
 
-    <!--Required meta tags-->
+    <!--Required meta tags insert here:-->
     <meta charset="UTF-8">
     <meta name="viewport" content="with-device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="Mirjam Wolf">
     <title>PWP - Patanjali Yogini</title>
 
-    <!-- Bootstrap core CSS -->
+    <!-- Bootstrap core CSS insert here:-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- CSS Stylesheet -->
+    <!-- CSS Stylesheet insert here:-->
     <link rel="stylesheet type=text/css" href="main-style.css">
+    <!-- Script file insert here:-->
     <script src="script.js"></script>
+
 </head>
 
 <body>
-
+<!--Navbar section-->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Patanjali Yogini</a>
+        <a class="navbar-brand" href="#">Patanjali ૐ Yogini</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -35,11 +37,14 @@
     </div>
 </nav>
 
-<div class="index-image">
+<!--index-image-1-->
+<div class="index-image-1">
     <img src="ganesha-01.jpg" class="img-fluid" alt="Ganesha">
 </div>
 
-<div class="section">
+
+<!--Section-1-->
+<div class="section-1">
     <div class="container-fluid-quote-1">
         <p><i>Yoga Chittavritti Nirodha</i></p>
         <p>Maharshi Patanjali, founder of the Yogic Philosophy defines Yog as concentration.</p>
@@ -47,7 +52,7 @@
     </div>
 </div>
 
-
+<!--Section-2-->
 <div class="container-fluid-quote-2">
     <div class="image-2">
         <img src="india-01.jpg" class="image-fluid" alt="India">
@@ -58,21 +63,32 @@
     </div>
 </div>
 
+
+<!--Section-3-->
 <div class="container-fluid-quote-3">
     <div class="image-3">
 
     </div>
     <div class="quote-3">
-        <p>"Another Quote from Yoga Sutras."</p>
+        <p><i><strong>"Yoga is Samadhi.</i></strong>"</p>
     </div>
 </div>
 
 
 
 
+<!--Sticky Footer-->
+<footer class="footer mt-auto p-4 bg-black">
+    <div class="footer-container">
+        <div class="text-center text-darkorange fs-3 text fst-italic fw-bold">
+            <p>Patanjali ૐ Yogini</p>
+        </div>
+    </div>
+</footer>
 
-
-<!-- Script from Bootstrap -->
+<!-- Script from Bootstrap insert here (at the bottom of body):-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
+
 </html>
