--- a/public_html/index.html
+++ b/public_html/index.html
@@ -20,7 +20,7 @@
 
 <body>
 <!--Navbar section-->
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-expand-md navbar-dark p-3 bg-dark fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Patanjali ૐ Yogini</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,11 +78,9 @@
 
 
 <!--Sticky Footer-->
-<footer class="footer mt-auto p-4 bg-black">
+<footer class="footer mt-auto p-3 bg-dark">
     <div class="footer-container">
-        <div class="text-center text-darkorange fs-3 text fst-italic fw-bold">
-            <p>Patanjali ૐ Yogini</p>
-        </div>
+        <p>Patanjali ૐ Yogini</p>
     </div>
 </footer>
 
