added more images as placeholders in section 4.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -74,7 +74,31 @@
     </div>
 </div>
 
+<!--Section 4-->
+<div class="col-sm-6 py-4">
+    <img src="images/conditioning.jpg" class="rounded-circle" alt="conditioning" width="200" height="200">
+    <span>Conditioning<br>Conditioning is a method that helps to increase focus and concentration. It is often done guided with the instructor or guru reciting a prayer.</span>
+</div>
 
+<div class="col-sm-6 py-4">
+    <img src="images/hastapadasana.jpg" class="rounded-circle" alt="conditioning" width="200" height="200">
+    <span>Conditioning<br>Conditioning is a method that helps to increase focus and concentration. It is often done guided with the instructor or guru reciting a prayer.</span>
+</div>
+
+<div class="col-sm-6 py-4">
+    <img src="images/conditioning-2.jpg" class="rounded-circle" alt="conditioning" width="200" height="200">
+    <span>Conditioning<br>Conditioning is a method that helps to increase focus and concentration. It is often done guided with the instructor or guru reciting a prayer.</span>
+</div>
+
+<div class="col-sm-6 py-4">
+    <img src="images/sitting-asana.jpg" class="rounded-circle" alt="conditioning" width="200" height="200">
+    <span>Conditioning<br>Conditioning is a method that helps to increase focus and concentration. It is often done guided with the instructor or guru reciting a prayer.</span>
+</div>
+
+<div class="col-sm-6 py-4">
+    <img src="images/conditioning.jpg" class="rounded-circle" alt="conditioning" width="200" height="200">
+    <span>Conditioning<br>Conditioning is a method that helps to increase focus and concentration. It is often done guided with the instructor or guru reciting a prayer.</span>
+</div>
 
 
 <!--Sticky Footer-->
