--- a/public_html/index.html
+++ b/public_html/index.html
@@ -46,7 +46,7 @@
 <!--Section-1-->
 <div class="section-1">
     <div class="container-fluid-quote-1">
-        <p><i>Yoga Chittavritti Nirodha</i></p>
+        <p><i><b>"Yoga Chittavritti Nirodha"</b></i></p>
         <p>Maharshi Patanjali, founder of the Yogic Philosophy defines Yog as concentration.</p>
         <p>The above saying translates to <i>"stoppage of fluctuations of the mind."</i></p>
     </div>
@@ -75,27 +75,86 @@
 </div>
 
 <!--Section 4-->
-<div class="col-sm-6 py-4">
-    <img src="images/conditioning.jpg" class="rounded-circle" alt="conditioning" width="200" height="200">
-    <span>1. Conditioning<br>Conditioning is a method that helps to increase focus and concentration. It is often done guided with the instructor or guru reciting a prayer.</span>
+<div class="section-4">
+
+    <h1>Sequence</h1>
+
+    <div class="col-sm-2 py-4 ">
+        <img src="images/conditioning-4.jpg" class="rounded-circle float" alt="conditioning" width="250" height="250">
+        <div class="rounded border border-dark p-3 bg-light text-center mt-4 mb-4">
+            <h2>1. Conditioning</h2><br>
+            <p>ૐ</p><br>
+            <p>Conditioning is a method that helps to increase focus and concentration. It is often done guided with the instructor or guru reciting a prayer.</p>
+        </div>
+    </div>
+
+    <div class="col-sm-2 py-4">
+        <img src="images/hastapadasana.jpg" class="rounded-circle float" alt="conditioning" width="250" height="250">
+        <div class="rounded border border-dark p-3 bg-light text-center mt-4 mb-4">
+            <h2>2. Asanas</h2><br>
+            <p>ૐ</p><br>
+            <p>Conditioning is a method that helps to increase focus and concentration. It is often done guided with the instructor or guru reciting a prayer.</p>
+        </div>
+    </div>
+
+    <div class="col-sm-2 py-4">
+        <img src="images/pranayama.jpg" class="rounded-circle" alt="conditioning" width="250" height="250">
+        <div class="rounded border border-dark p-3 bg-light text-center mt-4 mb-4">
+            <h2>3. Pranayamas</h2><br>
+            <p>ૐ</p><br>
+            <p>Conditioning is a method that helps to increase focus and concentration. It is often done guided with the instructor or guru reciting a prayer.</p>
+        </div>
+    </div>
+
+    <div class="col-sm-2 py-4">
+        <img src="images/meditation-2.jpg" class="rounded-circle" alt="conditioning" width="250" height="250">
+        <div class="rounded border border-dark p-3 bg-light text-center mt-4 mb-4">
+            <h2>4. Relaxation/Meditation</h2><br>
+            <p>ૐ</p><br>
+            <p>Conditioning is a method that helps to increase focus and concentration. It is often done guided with the instructor or guru reciting a prayer.</p>
+        </div>
+    </div>
 </div>
 
-<div class="col-sm-6 py-4">
-    <img src="images/hastapadasana.jpg" class="rounded-circle" alt="conditioning" width="200" height="200">
-    <span>2. Asana Practice<br>Conditioning is a method that helps to increase focus and concentration. It is often done guided with the instructor or guru reciting a prayer.</span>
+<!--Section-5: About Me-->
+<div class="section-5">
+    <div class="about-me">
+        <img src="images/mirjam.jpg" class="rounded-circle" alt="Mirjam" width="250" height="250">
+        <div class="column-1">
+            <p>How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified.</p>
+            <p>The Yoga Institute Santa Cruz, Mumbai.</p>
+        </div>
+        <div class="column-2">
+            <p>How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified.</p>
+            <p>The Yoga Institute Santa Cruz, Mumbai.</p>
+        </div>
+    </div>
 </div>
+<!--Section-6: Contact Form & Weekly Mantra Sign Up-->
+<!--Contact Form-->
+<div class="container-section-6>">
+    <h1 class="greeting">Namaste!</h1>
+    <h1>ૐ Contact me here to inquire about classes:</h1>
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-contact">Email address</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    </div>
+    <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
 
-<div class="col-sm-6 py-4">
-    <img src="images/conditioning-2.jpg" class="rounded-circle" alt="conditioning" width="200" height="200">
-    <span>3. Pranayamas<br>Conditioning is a method that helps to increase focus and concentration. It is often done guided with the instructor or guru reciting a prayer.</span>
+    <!--Weekly Mantra-->
+    <h1>ૐ Sign up for a weekly mantra!</h1>
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-mantra">Email address</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    </div>
+    <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
 </div>
-
-<div class="col-sm-6 py-4">
-    <img src="images/sitting-asana.jpg" class="rounded-circle" alt="conditioning" width="200" height="200">
-    <span>4. Relaxation/Meditation<br>Conditioning is a method that helps to increase focus and concentration. It is often done guided with the instructor or guru reciting a prayer.</span>
-</div>
-
-
 
 <!--Sticky Footer-->
 <footer class="footer mt-auto p-3 bg-dark">
