--- a/public_html/index.html
+++ b/public_html/index.html
@@ -39,7 +39,7 @@
 
 <!--index-image-1-->
 <div class="index-image-1">
-    <img src="ganesha-01.jpg" class="img-fluid" alt="Ganesha">
+    <img src="images/ganesha-01.jpg" class="img-fluid" alt="Ganesha">
 </div>
 
 
@@ -55,7 +55,7 @@
 <!--Section-2-->
 <div class="container-fluid-quote-2">
     <div class="image-2">
-        <img src="india-01.jpg" class="image-fluid" alt="India">
+        <img src="images/india-01.jpg" class="image-fluid" alt="India">
     </div>
     <div class="quote-2">
         <p>"Yoga is Samadhi - a deep state of concentration."<br>
@@ -77,43 +77,43 @@
 <!--Section 4-->
 <div class="section-4">
     <div class="container-fluid">
-
-    <h1>Sequence</h1>
-
-        <div class="col-sm-2 py-4 ">
-            <img src="images/conditioning-4.jpg" class="rounded-circle float" alt="conditioning" width="250" height="250">
-            <div class="rounded border border-dark p-3 bg-light text-center mt-4 mb-4">
-                <h2>1. Conditioning</h2><br>
-                <p>ૐ</p><br>
-                <p>Conditioning is a method that helps to increase focus and concentration. It is often done guided with the instructor or guru reciting a prayer.</p>
+        <h1>Sequence</h1>
+        <div class="row">
+            <div class="col-sm-6 py-4 d-flex align-items-center">
+                <img src="images/conditioning-4.jpg" class="rounded-circle float" alt="conditioning" width="250" height="250">
+                <div class="rounded border border-white p-3 bg-light text-center mt-4 mb-4 mx-4 h-auto card">
+                    <h2>1. Conditioning</h2>
+                    <p-1>ૐ</p-1>
+                    <p>Conditioning is a method that helps to increase focus and concentration. It is often done
+                        guided with the instructor or guru reciting a prayer.</p>
+                </div>
             </div>
-        </div>
 
-
-        <div class="col-sm-2 py-4">
-            <img src="images/hastapadasana.jpg" class="rounded-circle float" alt="conditioning" width="250" height="250">
-            <div class="rounded border border-dark p-3 bg-light text-center mt-4 mb-4">
-                <h2>2. Asanas</h2><br>
-                <p>ૐ</p><br>
-                <p>Conditioning is a method that helps to increase focus and concentration. It is often done guided with the instructor or guru reciting a prayer.</p>
+            <div class="col-sm-6 py-4 d-flex align-items-center">
+                <img src="images/hastapadasana.jpg" class="rounded-circle float" alt="conditioning" width="250" height="250">
+                <div class="rounded border border-white p-3 bg-light text-center mt-4 mb-4 mx-4 h-auto card">
+                    <h2>2. Asanas</h2>
+                    <p-1>ૐ</p-1>
+                    <p>The Asanas I am certified to teach are taken from traditional Hatha Yoga. They are chosen based on the overall directional stretch of the spine and are beginner friendly. They can be easily adjusted to match more difficult variations.</p>
+                </div>
             </div>
-        </div>
 
-        <div class="col-sm-2 py-4">
-            <img src="images/pranayama.jpg" class="rounded-circle" alt="conditioning" width="250" height="250">
-            <div class="rounded border border-dark p-3 bg-light text-center mt-4 mb-4">
-                <h2>3. Pranayamas</h2><br>
-                <p>ૐ</p><br>
-                <p>Conditioning is a method that helps to increase focus and concentration. It is often done guided with the instructor or guru reciting a prayer.</p>
+            <div class="col-sm-6 py-4 d-flex align-items-center">
+                <img src="images/pranayama.jpg" class="rounded-circle" alt="conditioning" width="250" height="250">
+                <div class="rounded border border-white p-3 bg-light text-center mt-4 mb-4 mx-4 h-auto card">
+                    <h2>3. Pranayamas</h2>
+                    <p-1>ૐ</p-1>
+                    <p>Pranayams or Pranayamas are breathing exercises to increase the capacity of your lungs and help with oxygen and blood flow. Depending on individual conditions there are special varieties that can aid in overall balance of the system. There are also Pranayams that are safe for everyone to practice, i.e. Brahmari.</p>
+                </div>
             </div>
-        </div>
 
-        <div class="col-sm-2 py-4">
-            <img src="images/meditation-2.jpg" class="rounded-circle" alt="conditioning" width="250" height="250">
-            <div class="rounded border border-dark p-3 bg-light text-center mt-4 mb-4">
-                <h2>4. Relaxation/Meditation</h2><br>
-                <p>ૐ</p><br>
-                <p>Conditioning is a method that helps to increase focus and concentration. It is often done guided with the instructor or guru reciting a prayer.</p>
+            <div class="col-sm-6 py-4 d-flex align-items-center">
+                <img src="images/shavasana.jpg" class="rounded-circle" alt="conditioning" width="250" height="250">
+                <div class="rounded border border-white p-3 bg-light text-center mt-4 mb-4 mx-4 h-auto card">
+                    <h2>4. Meditation</h2>
+                    <p-1>ૐ</p-1>
+                    <p>Every Yoga session should finish with mindful relaxation. This is often achieved through Shavasana ("The Corpse Pose"). Similar to conditioning at the beginning of each session, you can finish with a prayer or simply by chanting Aum.</p>
+                </div>
             </div>
         </div>
     </div>
@@ -122,23 +122,29 @@
 <!--Section-5: About Me-->
 <div class="section-5">
     <div class="container-fluid">
-        <div class="about-me">
-            <img src="images/mirjam.jpg" class="rounded-circle" alt="Mirjam" width="250" height="250">
-            <div class="column-1">
-                <p>How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified.</p>
-                <p>The Yoga Institute Santa Cruz, Mumbai.</p>
+
+        <img src="images/mirjam.jpg" class="rounded-circle" alt="Mirjam" width="250" height="250">
+        <h1>About Me</h1>
+        <div class="row-g2">
+            <div class="about-me">
+                <div class="column-1">
+                    <p>My love for Yoga did not develop overnight, it took me a few years to get into it. Being someone who used to enjoy running a lot, I found it rather difficult to sit down on a mat and do Asanas. However, after giving it another try, I was astounded by the results that I got from practicing Kundalini Yoga. Kundalini Yoga opened up the door to meditation and my love for Indian culture and philosophy. I wanted to learn more about Yogic Philosophy and traditional forms of Yoga and I wanted to learn from Indian teachers. </p>
+                </div>
+                <div class="column-2">
+                    <p>After being in lockdown for such a long period, it gave me the opportunity to look inward but also do some research. The Yoga Institute Santacruz, Mumbai is the oldest accredited Yoga school in the world. The current guru, Dr. Hansaji Yogendra, wife of the late Dr. Yogendra, had an influential role in the formulation of a formal syllabus for Yoga schools across the world. To this day she is one of India's most influential experts in the field of Yoga. I thoroughly enjoyed my learning experience with my Indian teachers and "batch mates". I miss them dearly. We still message each other or meet up via Zoom to practice together.</p>
+                </div>
+                <div class="column-3">
+                    <p>The sequence that I follow is the sequence that I learned from my Indian teachers. I was also trained in Kriyas and Pranayamas which I practice. Although I practice Kundalini yoga, I do not teach it. The asanas that I am certified to teach are traditional and safe beginners friendly asanas taken from Hatha Yoga. If you are interested in learning about Yogic Philosophy and techniques that go beyond obscure asanas performed by Western celebrities, I suggest you check out their website.</p>
+                    <p>Where I got certified as RYT 200: The Yoga Institute Santacruz, Mumbai.</p>
+                    <p>Find out more about my accredited Yoga school here:</p>
+                    <a href="https://theyogainstitute.org/">The Yoga Institute Mumbai Website</a><br>
+                    <a href="https://www.youtube.com/watch?v=jwDhDbeShQw&t=8s/">YouTube Video on The Yoga Institute</a>
+                </div>
             </div>
-            <div class="column-2">
-                <p>How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified. How I got into Yoga and where I was certified.</p>
-                <p>The Yoga Institute Santa Cruz, Mumbai.</p>
-            </div>
-            <!--<div class="column-3">
-                <p>Link: The Yoga Institute Santa Cruz, Mumbai.</p>
-                <p>Link: The Yoga Institute Santa Cruz, Mumbai.</p>
-            </div>-->
         </div>
     </div>
 </div>
+
 <!--Section-6: Contact Form & Weekly Mantra Sign Up-->
 <!--Contact Form-->
 <div class="section-6">
@@ -149,13 +155,18 @@
         <h1>ૐ Contact me here to inquire about classes:</h1>
 
         <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-contact">Email address</label>
+            <label for="exampleFormControlInput1" class="form-contact">Your Name</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name">
+            <label for="exampleFormControlInput1" class="form-contact">Your Email</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            <label for="exampleFormControlInput1" class="form-contact">Subject</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1">
         </div>
         <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+            <label for="exampleFormControlTextarea1" class="form-label">Your Message</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
+        <button class="button-message">Submit Message</button>
 
         <!--Weekly Mantra-->
         <h1>ૐ Sign up for a weekly mantra!</h1>
@@ -163,10 +174,7 @@
             <label for="exampleFormControlInput1" class="form-mantra">Email address</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
         </div>
-        <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
+        <button class="button-mantra">Receive Mantra</button>
     </div>
 </div>
 
