--- a/public_html/documentation/milestone-1.html
+++ b/public_html/documentation/milestone-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>PWP: Patanjali Yogini</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="milestone-style.css">
 </head>
 
 <!---Purpose, Audience, and Goal of the Website--->
